# asadal-test

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/email/: config.py  router.py  schemas.py  service.py  validators.py
app/email/templates/: email.html
app/tasks/: tasks.py
app/tests/: conftest.py
app/tests/unit_tests/test_email/: test_api.py
deploy/: app.sh  docker-compose.yml
