[tool.poetry]
name = "asadal-test"
version = "0.1.0"
description = ""
authors = ["Max Bazarov <bazaroffm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
python-json-logger = "^2.0.7"
celery = "^5.3.4"
flower = "^2.0.1"
aioredis = "^2.0.1"
gunicorn = "^21.2.0"
pydantic-settings = "^2.0.3"
redis = "^5.0.1"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"
flake8 = "^6.1.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
